<resources>
    <string name="app_name">TnS Assistant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ip_address">http://192.168.0.63/TnSAssistant/</string>

    <!--<string name="tns_font_family">sans-serif-light</string>-->
    <string name="tns_font_family">sans-serif-medium</string>
    <string name="cv_icon">CV</string>
    <string name="syllabus_icon">Syllabus</string>
    <string name="statistics_icon">Statistics</string>
    <string name="shared_files_icon">Shared Files</string>
    <string name="classmates_icon">Classmates</string>
    <string name="result_sheet_icon">Result Sheet</string>
    <string name="notice_board_icon">Notice Board</string>
    <string name="inbox_icon">Inbox</string>
    <string name="all_courses_icon">All Courses</string>
    <string name="dept_hint_background">Dept</string>
    <string name="reg_id_hint_background">Reg ID</string>
    <string name="update_details_hint_background">Update Details</string>
    <string name="upload_image_btn">Upload Image</string>
    <string name="student_s_name_hint_background">Student\'s Name</string>
    <string name="email_hint_background">Email</string>
    <string name="attendance_icon">Attendance</string>
    <string name="share_files_icon">Share Files</string>
    <string name="students_icon">Students</string>
    <string name="rate_us">Rate us</string>
    <string name="about_us">About Us</string>
    <string name="welcome_to_tns">Welcome To TnS</string>
    <string name="are_you">Are you</string>
    <string name="teacher_radio">Teacher</string>
    <string name="or">Or</string>
    <string name="student_radio">Student</string>
    <string name="sign_in_to_enter_your_profile">Sign in to Enter your Profile</string>
    <string name="username_txt">Username</string>
    <string name="password_txt">Password</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="course_title">Course Title</string>
    <string name="course_code">Course Code</string>
    <string name="credit">Credit</string>
    <string name="session">Session</string>
    <string name="semester">Semester</string>
    <string name="logout">Logout</string>
    <string name="title_activity_all_courses">AllCoursesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="viva">Viva</string>
    <string name="final_exam">Final Exam</string>
    <string name="attendance">Attendance</string>
    <string name="term_test_2">Term Test 2</string>
    <string name="term_test_1">Term Test 1</string>
    <string name="marks_in_total">Marks in Total</string>
    <string name="set_rules_for_your_course">Set Rules For Your Course</string>
    <string name="course_exam_name">Course Exam Name</string>
    <string name="update_data">Update Data</string>
    <string name="exam_percent">Exam Percent</string>
    <string name="change_exam_percent_out_of_100">Change Exam Percent Out of 100</string>
    <string name="change_exam_name">Change Exam Name</string>
    <string name="count_as_average">Count as Average</string>
    <string name="avg_functions">Update Average Functions</string>
    <string name="update_rules">Update Rules</string>
    <string name="as_per_rules">Marks Out Of 100 (As Per Rules)</string>
    <string name="checked_items_as_average">*** Checked items will be counted as average!!</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="exam_setup">Exam Setup</string>
    <string name="upload">Upload</string>
    <string name="choose">Choose</string>
    <string name="upload_image_less_than">* Upload Image less than 5MB Size</string>
    <string name="close">Close</string>
    <string name="running_courses">Running Courses</string>
    <string name="load">Load</string>
    <string name="update_details">Update Details</string>
    <string name="upload_image">Upload Image</string>
    <string name="dept">Dept</string>
    <string name="desig">Desig</string>
    <string name="teacher_s_name">Teacher\'s Name</string>
    <string name="code">Code</string>
    <string name="email">Email</string>
    <string name="updated">Updated</string>
    <string name="change_your_exam_hint">Change Your Exam Name and Percentage</string>
    <string name="customize_exam">Customize Exam</string>
    <string name="dot">.</string>
    <string name="click_load_button">Click Load Button to See Running Courses</string>
    <string name="requesting_running_courses">Requesting Running Courses</string>
    <string name="no_network_status">No Network Available. Please Turn on your Wifi or Mobile Data</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="check_in_your_profile">Please check in your Profile</string>
    <string name="login_success">Login is Successful</string>
    <string name="have_not_checked">You haven\'t checked any profile yet!</string>
    <string name="network_unreachable">Network Unreachable!!</string>
    <string name="no_rules_set_up">No rules set up!!</string>
    <string name="demo_std_name">Shamsul Arafin Mahtab</string>
    <string name="demo_reg_id">Reg ID: 2014331063</string>

    <!--<string name="tns_font_family">sans-serif</string>-->
    <!--<string name="tns_font_family">sans-serif-condensed</string>-->
    <!--<string name="tns_font_family">sans-serif-black</string>-->
    <!--<string name="tns_font_family">sans-serif-thin</string>-->
</resources>
