<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/student_image_load"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/student_upload_btn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/display_picture"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/image_uploading_alert2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="2dp"
                android:text="@string/upload_image_less_than"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorTnSText"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/student_choose_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:text="@string/choose"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTnSText"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/student_upload_btn"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/student_upload_btn"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/student_upload_btn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:text="@string/upload"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/colorTnSText"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintHorizontal_bias="0.701"
                    app:layout_constraintLeft_toRightOf="@+id/student_choose_btn"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:layout_editor_absoluteY="308dp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
