<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.CardView
        android:id="@+id/std_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/std_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector"
            android:orientation="horizontal"
            android:padding="3dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/stdlist_display"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                fresco:actualImageScaleType="focusCrop"
                fresco:placeholderImage="@drawable/student_round"
                fresco:placeholderImageScaleType="fitCenter" />

            <LinearLayout
                android:id="@+id/std_linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/stdlist_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:fontFamily="@string/tns_font_family"
                    android:text="@string/demo_std_name"
                    android:textColor="@color/text_selector"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/stdlist_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:text="@string/demo_reg_id"
                    android:textColor="@color/text_selector2"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/call_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/std_mail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/icon_selector_oval"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/ic_mail" />

                    <ImageButton
                        android:id="@+id/std_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/icon_selector_oval"
                        android:contentDescription="@null"
                        app:srcCompat="@android:drawable/sym_action_call" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
